# DCA

./: CMakeLists.txt  README.md  README_8md.html  annotated.html  classDCA_1_1Capsule-members.html  classDCA_1_1Capsule.html  classDCA_1_1Capsule__coll__graph.map  classDCA_1_1Capsule__coll__graph.md5  classDCA_1_1CollisionWith-members.html  classDCA_1_1CollisionWith.html  classDCA_1_1CollisionWithAll-members.html  classDCA_1_1CollisionWithAll.html  classDCA_1_1CollisionWithAll__coll__graph.map  classDCA_1_1CollisionWithAll__coll__graph.md5  classDCA_1_1CollisionWithAll__inherit__graph.map  classDCA_1_1CollisionWithAll__inherit__graph.md5  classDCA_1_1NeighborsPairGenerator-members.html  classDCA_1_1NeighborsPairGenerator.html  classDCA_1_1NeighborsPairGenerator__coll__graph.map  classDCA_1_1NeighborsPairGenerator__coll__graph.md5  classDCA_1_1PairGenerator-members.html  classDCA_1_1PairGenerator.html  classDCA_1_1PairGenerator__inherit__graph.map  classDCA_1_1PairGenerator__inherit__graph.md5  classDCA_1_1PermutationPairGenerator-members.html  classDCA_1_1PermutationPairGenerator.html  classDCA_1_1PermutationPairGenerator__coll__graph.map  classDCA_1_1PermutationPairGenerator__inherit__graph.md5  classDCA_1_1Sphere-members.html  classDCA_1_1Sphere.html  classDCA_1_1Sphere__coll__graph.map  classDCA_1_1Sphere__coll__graph.md5  classes.html  dca_8h.html  dca_8h_source.html  dir_40a3669b400585fbe1c782635e02a49e.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  (+31 more)
examples/: CMakeLists.txt  example.cpp  minimizer.cpp
python/: CMakeLists.txt  bindings.cpp
python/python_files/: __init__.py  setup.py
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  (+18 more)
tests/: CMakeLists.txt  finite_differences.cpp
(+25 files in other folders)
